* Ctrl+N now creates a new file, instead of Ctrl+T. Issue #323
* Ctrl+T is now not used for anything. Issue #323
* Bug fix: no more exception while building a completion list. Issue #321
* Bug fix: removing from FS tree via a context menu did not update the view.
  Issue #325
* Bug fix: impossible to create a nested project directory



2012 Jan 26  Sergey Satskiy <sergey.satskiy@gmail.com>

* Release 1.4
* Bug fix: proper search result window notifications that a buffer has changed.
* Improvement: no unnecessary scrolling of a buffer if a line to which jump is
  requested is visible on the screen.
* New feature: Ctrl+] searches for occurrences of a current word.
* New feature: Ctrl+F3 starts search of a current word without bringing up the
  find dialog.
* Ctrl+F/Ctrl+R keep the 'match case' and 'whole word' flags as they were
  before.
* Bug fix: copy/paste buffer content was overwritten when the user selected an
  item in a completion list. Issue #310.
* Bug fix: exception while creating a new project
* New feature: run a script in a separate terminal. The running parameters are
  cached and stored. The stored parameters are used to run the same script
  later.
* Bug fix: update tabs history properly when jumping within the same file.
* New feature: goto definition (Ctrl+backslash)
* New feature: docstring for a buffer tag when Ctrl+F1 is pressed.
* Bug fix: no more cursor jumping to another line if the feature of stripping
  trailing spaces on save is switched on and a line has trailing spaces and the
  cursor is at the end of the line.
* Strip ability to have many non-nested dirs in a project.
* New feature: project specific paths to resolve imports.
* New feature: code completion (TAB, Ctrl+Space).
* Dependency from the rope library is introduced.


2011 Nov 29  Sergey Satskiy <sergey.satskiy@gmail.com>

* Release 1.3
* Bug fix: correct tooltips for search results in the HTML files. Issue #188.