@@ -7,6 +7,7 @@ XXXX XXX XX  Sergey Satskiy <sergey.satskiy@gmail.com>
 * Bug fix: removing from FS tree via a context menu did not update the view.
   Issue #325
 * Bug fix: impossible to create a nested project directory
+* Bug fix: do not show the 'reload' menu item for deleted file
 
 
 
